--- a/css/import.css
+++ b/css/import.css
@@ -5,10 +5,10 @@
 
 :root {
   --color1: #ffffff;
-  --color2: #24405A;
-  --color3: #2E577A;
+  --color2: #001930;
+  --color3: #096AB1;
   --color4: #3A6C9D;
-  --color5: #51A0EA;
+  --color5: #0086FF;
   --color6: #4284BF;
   --color7: #4E9BE0;
   --color8: #45F550;
