--- a/css/home.css
+++ b/css/home.css
@@ -41,7 +41,7 @@ section.home {
 .home-content h4 {
   font-size: 1.7rem;
   margin-bottom: 1rem;
-  color: var(--color9);
+  color: var(--color1);
   padding-top: 1rem;
   font-weight: 700;
 }
@@ -68,29 +68,23 @@ section.home {
 }
 
 .btn {
-  width: 90%;
+  width: 85%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   text-decoration: none;
-  background-color: var(--color4);
+  background-color: var(--color3);
   padding: 0.9rem 1.6rem 0.9rem 1.7rem;
   border: none;
   border-radius: 2rem;
   color: var(--color1);
-  font-size: 1rem;
+  font-size: 1.1rem;
   cursor: pointer;
-  /*box-shadow: 1px 1px 30px var(--color3);*/
-}
-
-.btn:hover {
-  background-color: var(--color3);
-  color: var(--color1);
-  transition: .6s;
+  box-shadow: 1px 1px 30px var(--color3);
 }
 
 .btn i {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .foto-perfil img {
