--- a/css/formacoes.css
+++ b/css/formacoes.css
@@ -40,7 +40,6 @@ section.formacoes {
 }
 
 .serviços  .serv {
-    width: 500px;
     border-radius: 2rem;
     padding: 8px;
 }
@@ -48,7 +47,7 @@ section.formacoes {
 
 #suporte {
     margin: 1rem;
-
+    height: 20vh;
 }
 
 #suporte h4 {
@@ -120,7 +119,7 @@ section.formacoes {
     align-items: center;  
     justify-content: space-between;
     font-size: 17px;
-    background-color: var(--color4);
+    background-color: var(--color3);
     color: #e6e6e6;
     padding: 9px 18px 9px 28px;
     margin-top: 0.6rem;
