--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@ section.home {
 }
 
 .home .home-content {
-  max-width: 44rem;
+  max-width: 43rem;
 }
 
 .home-content h3 {
@@ -32,6 +32,7 @@ section.home {
   color: transparent;
 }
 
+
 .home-content h2 {
   font-size: 2rem;
   margin-bottom: 1rem;
@@ -48,44 +49,51 @@ section.home {
 
 .home-content p {
   font-size: 18px;
-  margin-bottom: .8rem;
   color: var(--color5);
   line-height: 30px;
   font-weight: 450;
 }
 
-.btns {
-  width: 50%;
-  margin-top: 2rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+.home-content .p-2 {
+  margin-top: 0.9rem;
 }
 
-.btns:hover {
-  transform: scale(1.05);
-  transition: .2s;
-}
-
-.btn {
-  width: 85%;
+.home-content a {
+  margin-top: 1.7rem;
+  text-decoration: none;
+  width: 17rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  text-decoration: none;
   background-color: var(--color3);
-  padding: 0.9rem 1.6rem 0.9rem 1.7rem;
+  padding: 0.9rem 1.7rem 0.9rem 1.7rem;
   border: none;
   border-radius: 2rem;
   color: var(--color1);
-  font-size: 1.1rem;
+  font-size: 1rem;
+  margin-left: 10px;
   cursor: pointer;
+  font-weight: 500;
   box-shadow: 1px 1px 30px var(--color3);
 }
 
-.btn i {
-  font-size: 1.5rem;
+.home-content a .title {
+  color: var(--color1);
 }
+
+.home-content a .number {
+    color: var(--color8);
+    transform: scale(1.05);
+    transition: .2s;
+}
+
+.home-content a:hover {
+  color: var(--color1);
+  transition: .2s;
+  transform: scale(1.05);
+}
+
+
 
 .foto-perfil img {
   margin: auto;
