--- a/css/formacoes.css
+++ b/css/formacoes.css
@@ -26,8 +26,8 @@ section.formacoes {
 }
 
 .serviços {
-    box-shadow: 1px 1px 10px var(--color3);
-    border: var(--color3) 1px solid;
+    box-shadow: 1px 1px 15px var(--color5);
+    border: var(--color5) 1px solid;
     border-radius: 2rem;
     display: flex;
     /*background-color: var(--color3);*/
@@ -47,14 +47,13 @@ section.formacoes {
 
 #suporte {
     margin: 1rem;
-    height: 20vh;
 }
 
 #suporte h4 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: var(--color9);
+    color: var(--color7);
     font-size: 23px;
     padding-bottom: 1rem;
     font-weight: 700;
@@ -66,6 +65,7 @@ section.formacoes {
 
 
 #suporte p {
+    height: auto;
     line-height: 29px;
     padding-right: 1rem;
     color: var(--color5);
@@ -149,7 +149,7 @@ section.formacoes {
     align-items: center;
     justify-content: space-between;
     color: #00B2E0;
-    padding: 4rem 25px 8px 20px;
+    padding: 1rem 25px 8px 20px;
     gap: 6px;
     font-weight: 500;
 }
@@ -181,7 +181,10 @@ section.formacoes {
 
     #suporte {
         margin: 1rem;
-        height: 17vh;
+    }
+
+    #suporte p {
+        height: auto;
     }
 
 
